--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <img id ="logo" src="/uploads/2020/12/logo_0_1607675596.svg" height="40px"/>
+            <img id ="logo" src="https://avatars.mds.yandex.net/i?id=80232e02f0fa894215e5be60314b68434610dea5-9068519-images-thumbs&n=13" height="40px"/>
             <b>Внимание! Сезонные скидки 40% </b><a href="#discount">Подробнее</a>
         </header>
         <main>
@@ -16,7 +16,7 @@
                 <a href="#about_us">О компании</a>
             </nav>
             <h1><i>Fantastic Party</i></h1>
-            <img src="/uploads/2020/12/fireworks-2731725_1920_0_1607673819.jpg" width="850px"/>
+            <img src="https://salut22.com/images/bg.jpg" width="850px"/>
             <h2 id="price">Наши фейерверки</h2>
             <p>
                 <p class="prodact"><img src="/uploads/2020/12/%D1%85%D0%BB%D0%BE%D0%BF%D1%83%D1%88%D0%BA%D0%B0_0_1607673818.svg" width="70px"/><br/>Хлопушки</p>
